--- a/工程表.md
+++ b/工程表.md
@@ -13,7 +13,7 @@
 18:50 開場.  
 19:00 挨拶開始（平澤・いぶき・そうた）.  
 19:15 挨拶終了。今回マッピングするプロジェクトを発表 + ここで一応記念撮影（途中で抜ける人がいると想定されるため）.  
-19:20 マッピング開始.  
+19:20 マッピング開始. ブレイクアウトルームを使って初級者をフォローする部屋とmain roomに分ける 
 20:40 マッピング終了. 
 20:45 記念撮影 + Certificationを送るためのフォームを共有
 21:00 開催.  
