--- a/工程表.md
+++ b/工程表.md
@@ -2,8 +2,8 @@
 - [ ] ユースとrapidについてまとめたスライド（英）
 - [ ] ユースとrapidについてまとめたスライド（日）
 - [ ] HOTのどのプロジェクトでいくかの決定
-- [ ] 古橋研メンバーはZoom名をHost_氏名にするように周知する
-- [ ] Certificationを送るためのGoogleフォーム作成（掲載して欲しい名前とメアドを集める）
+- [x] 古橋研メンバーはZoom名をHost_氏名にするように周知する
+- [x] Certificationを送るためのGoogleフォーム作成（掲載して欲しい名前とメアドを集める）
 - [ ] 古橋先生にZoomの権限周りをもらうこと。
 - [ ] Zoomの待機スペースの設定
 - [ ] 今回のハッシュタグ（#YMAGU4crisis）の共有
