--- a/工程表.md
+++ b/工程表.md
@@ -1,7 +1,7 @@
 ## 本番までに行っておくべきチェックリスト
-- [ ] ユースとrapidについてまとめたスライド（英）
-- [ ] ユースとrapidについてまとめたスライド（日）
-- [ ] HOTのどのプロジェクトでいくかの決定
+- [x] ユースとrapidについてまとめたスライド（英）
+- [x] ユースとrapidについてまとめたスライド（日）
+- [x] HOTのどのプロジェクトでいくかの決定
 - [x] 古橋研メンバーはZoom名をHost_氏名にするように周知する
 - [x] Certificationを送るためのGoogleフォーム作成（掲載して欲しい名前とメアドを集める）
 - [ ] 古橋先生にZoomの権限周りをもらうこと。
@@ -11,8 +11,9 @@
 ## 2023/02/17の流れ
 18:40 運営メンバー集合（可能な限り集まれる方は集まって欲しいです。）流れを平澤からざっくり説明   
 18:50 開場.  
-19:00 挨拶開始（平澤・いぶき・そうた）.  
+19:00 挨拶開始（平澤・いぶき・そうた）. ユースとRapidの説明まで行う.   
 19:15 挨拶終了。今回マッピングするプロジェクトを発表 + ここで一応記念撮影（途中で抜ける人がいると想定されるため）.  
+19:18 行うマッピングプロジェクトの共有.   
 19:20 マッピング開始. ブレイクアウトルームを使って初級者をフォローする部屋とmain roomに分ける.  
 20:40 マッピング終了. 
 20:45 記念撮影 + Certificationを送るためのフォームを共有
